--- a/slides/01-introduction-slides.qmd
+++ b/slides/01-introduction-slides.qmd
@@ -19,6 +19,8 @@ format:
 
 ## Qui suis-je ?
 
+<br>
+
 * Diplôme d'ingénieur en statistique + Maitrise en analyse de données massives à l'ENSAI, France
 
 * Doctorat en maths appliqués, statistiques à l'ENSAI, France
@@ -50,39 +52,66 @@ format:
 
 ::::
 
-## Test 
-
-<iframe allowfullscreen frameborder="0" height="100%" mozallowfullscreen style="min-width: 500px; min-height: 355px" src="https://app.wooclap.com/events/YKXGDJ/questions/68a750d9677a8f6ce3ee3442" width="100%"></iframe>
-
-<iframe allowfullscreen frameborder="0" height="100%" mozallowfullscreen style="min-width: 500px; min-height: 355px" src="https://app.wooclap.com/events/YKXGDJ/questions/68a750d9677a8f6ce3ee3442" width="100%"></iframe>
-
-## Test
-
-
 
 ## Qu'est ce que l'analyse de données ?
 
+<br>
+
+L'analyse de données est un ensemble de méthodes permettant de retirer de l'information d'un jeu de données. On parle aussi d'apprentissage statistique (*statistical learning*).
+
+. . .
+
+::: {.callout-note icon=false}
+## Exemple
+
+Vous travaillez pour l'ONU. Votre mission est d'avoir de l'information sur l'espérance de vie à travers le monde. Pour cela, vous disposez de diverse données sur les différents pays du monde.
+
+::: 
 
 
 ## Ce qu'on ne fait **PAS** dans ce cours
 
+<br>
+
+mais qui pourrait être inclus dans un cours d'analyse de données.
+
 * Visualisation de données
 
-* Algorithmique
+* Développement algorithmique
+
+* Deep learning
 
 
 
 ## Ce qu'on fait dans ce cours
 
-* Compréhension des concepts 
+<br>
 
-* Mathématiques
+* Compréhension des concepts d'analyse de données
+
+* Développement mathématique des méthodes classiques
+
+* Practique de l'analyse de données
+
+* Utilisation des librairies classiques
+
+
+## À quoi ça sert ?
+
+<br>
+
+Les méthodes enseignées servent à
+
+* réduire la dimension des données
+
+* classifier des individus automatiquement
+
+* former des groupes d'individus
+
 
 ## Contenu du cours
 
-
-
-## Format du cours
+<br>
 
 1. Révisions / Rappels
 
@@ -94,34 +123,103 @@ format:
 
 5. Classification non-supervisée
 
+6. Éthique
+
+## Format du cours
+
+<br>
+
+* Mardi : Laboratoire 1h (mais la salle est réservée pour 2h)
+
+* Vendredi : Cours magistral 2h
+
+* Les labs du mardi porteront sur le cours vu le vendredi. Vous pouvez ammener votre propre laptop pour les labs, cependant les ordinateurs de l'université seront utilisable.
+
+* Les labs consisteront en des exercices (théoriques et pratiques) à faire en autonomie et je serais là pour répondre à vos questions. 
+
 
 ## Évaluations
 
-* Partiel le ... $\longrightarrow$ QCM (30\%)
+<br>
 
-* Examen final le ... (50\%)
+* Intra le 24 octobre $\longrightarrow$ QCM (30\%)
+  + Reprise le 30 octobre
 
-* Projet libre en équipe à rendre le ... (20\%)
+* Examen final le 12 décembre (50\%)
+  + Reprise le 18 décembre
+
+* Projet en équipe à rendre le 2 décembre à 17h00 (20\%)
+
+* Présentation du projet le 9 décembre au matin.
 
 
 ## Logiciels
 
-* Libre à vous de choisir votre logiciel préféré (ou celui que vous maitrisez le mieux)
+<br>
 
-* Cependant, R ou Python est recommandé
+Libre à vous de choisir votre logiciel préféré (ou celui que vous maitrisez le mieux)
+
+
+:::: {.columns .v-center-container-2}
+
+::: {.column width="60%"}
+
+![](./img/wooclap_qr_code.png){width=50%}
+
+:::
+
+::: {.column width="40%"}
+
+1. Allez sur [wooclap.com](https://www.wooclap.com)
+
+2. Entrez le code **KFFPDJ**
+
+:::
+
+::::
+
 
 ## Communications
+
+<br>
 
 * Site du cours MonPortail
 
 * Notes de cours : [stt-2200.netlify.app](https://stt2200.netlify.app)
 
-* Une question : forum ou courriel ?
+* Une question : forum ou courriel
 
 * Mon bureau : VCH-2209
 
-## Mon rôle comme prof
+
+## Mon rôle
+
+<br>
+
+* Mon but est de vous aider dans votre apprentissage.
+
+* J'essaie de vous poser des questions, de vous présenter des exemples et de vous aider à utiliser les ressources disponibles pour vous assurer d'avoir bien compris.
+
+* Mon objectif est de vous donner les bases et les compétences nécessaires pour continuer à apprendre sur ces sujets de manière indépendante, tout en ayant du recul sur l'utilisation des différentes méthodes. 
 
 
+
+## Politique sur la sécurité dans les laboratoires informatiques
+
+<br>
+
+Pour utiliser les laboratoires informatiques, il faut avoir pris connaissance de la Politique de sécurité et vous engagez à vous y conformer :
+
+<center>
+[www.fsg.ulaval.ca/securite-labo-info](https://ulavaldti.sharepoint.com/sites/PolitiqueSecuriteLaboInfo/SitePages/TopicHome.aspx?csf=1&web=1&e=3c0nsV&CID=28a511c7-5337-43ca-89a6-25e37be332a5)
+</center>
+
+## Pour finir l'introduction
+
+<br>
+
+> Statistics courses […] tend to resemble horoscopes.
+
+R. McElreath - Statistical Rethinking
 
 # Questions ?
