--- a/slides/01-introduction-slides.qmd
+++ b/slides/01-introduction-slides.qmd
@@ -55,13 +55,35 @@ format:
 
 ## Qu'est ce que l'analyse de données ?
 
+:::: {.columns .v-center-container}
+
+::: {.column width="60%"}
+
+![](./img/wooclap_qr_code.png)
+
+:::
+
+::: {.column width="40%"}
+
+1. Allez sur [wooclap.com](https://www.wooclap.com)
+
+2. Entrez le code **KFFPDJ**
+
+:::
+
+::::
+
+
+
+## Qu'est ce que l'analyse de données ?
+
 <br>
 
 L'analyse de données est un ensemble de méthodes permettant de retirer de l'information d'un jeu de données. On parle aussi d'apprentissage statistique (*statistical learning*).
 
 . . .
 
-::: {.callout-note icon=false}
+::: {.callout-tip icon=false}
 ## Exemple
 
 Vous travaillez pour l'ONU. Votre mission est d'avoir de l'information sur l'espérance de vie à travers le monde. Pour cela, vous disposez de diverse données sur les différents pays du monde.
