--- a/slides/02-revisions-algebre-slides.qmd
+++ b/slides/02-revisions-algebre-slides.qmd
@@ -19,313 +19,346 @@ format:
 
 ## Plan de la présentation
 
-- Propriétés matricielles
-- Valeurs et vecteurs propres
-- Diagonalisation de matrices
-- Applications pratiques
+<br>
+
+1. Propriétés matricielles
+
+2. Valeurs et vecteurs propres
+
+3. Diagonalisation de matrices
+
+4. Applications pratiques
 
 # Propriétés matricielles
 
 ## Notations de base
 
-::: {.incremental}
+<br>
+
 - $M_{n, m}(\mathbb{R})$ : matrices à $n$ lignes et $m$ colonnes
+
 - $M_{n}(\mathbb{R})$ : matrices carrées de taille $n$  
+
 - $I_n$ : matrice identité de taille $n$
+
 - $u, v \in \mathbb{R}^n$ : vecteurs colonnes
-:::
 
-## Inverse de matrices {.smaller}
+## Propriétés du déterminant
 
-::: {.callout-important}
-**Propriété fondamentale**
+<br>
 
-Si $A$ et $B$ sont inversibles, alors :
-$(AB)^{-1} = B^{-1} A^{-1}$
-:::
+::: {.callout-note icon=false}
+## Propriétés
 
-::: {.fragment}
-**Exemple pratique :**
-$A = \begin{pmatrix} 2 & 0 \\ 0 & 3 \end{pmatrix}, \quad B = \begin{pmatrix} 1 & 1 \\ 0 & 1 \end{pmatrix}$
+* $\det(A^\top) = \det(A)$
 
-$AB = \begin{pmatrix} 2 & 2 \\ 0 & 3 \end{pmatrix}, \quad (AB)^{-1} = \begin{pmatrix} 1/2 & -1/3 \\ 0 & 1/3 \end{pmatrix}$
+* $\det(AB) = \det(A)\det(B)$
 
-Et effectivement : $B^{-1}A^{-1} = \begin{pmatrix} 1 & -1 \\ 0 & 1 \end{pmatrix} \begin{pmatrix} 1/2 & 0 \\ 0 & 1/3 \end{pmatrix} = \begin{pmatrix} 1/2 & -1/3 \\ 0 & 1/3 \end{pmatrix}$
+* $\det(A^{-1}) = \frac{1}{\det(A)}$
+
 :::
 
 ## Propriétés du déterminant
 
-::: {.callout-important}
-**Propriétés essentielles**
+<br>
 
-1. $\det(A^\top) = \det(A)$
-2. $\det(AB) = \det(A)\det(B)$
-3. $\det(A^{-1}) = \frac{1}{\det(A)}$
+Cas particulier où $A \in M_{2}(\mathbb{R})$. 
+
+Soit $A = \begin{pmatrix} a & b \\ c & d \end{pmatrix}$. Alors 
+
+$$\det(A) = ad - bc.$$
+
+
+## Propriété du déterminant : exemple (Wooclap: KFFPDJ)
+
+<br>
+
+$$A = \begin{pmatrix} 1 & 2 \\ 3 & 4 \end{pmatrix}, \quad B = \begin{pmatrix} 2 & 0 \\ 1 & 1 \end{pmatrix}$$
+
+. . .
+
+On trouve que $\det(A) = 4 - 6 = -2$, $\det(B) = 2 - 0 = 2$. Donc
+
+$$\det(AB) = \det(A) \det(B) = -4$$
+
+
+## Inverse de matrices 
+
+<br>
+
+::: {.callout-note icon=false}
+## Propriété
+
+Si $A$ et $B$ sont inversibles, alors :
+$(AB)^{-1} = B^{-1} A^{-1}$.
 :::
 
-::: {.fragment}
-**Exemple concret :**
-$A = \begin{pmatrix} 1 & 2 \\ 3 & 4 \end{pmatrix}, \quad B = \begin{pmatrix} 2 & 0 \\ 1 & 1 \end{pmatrix}$
 
-$\det(A) = 4 - 6 = -2$, $\det(B) = 2$
+## Inverse de matrices
 
-$AB = \begin{pmatrix} 4 & 2 \\ 10 & 4 \end{pmatrix}$, $\det(AB) = 16 - 20 = -4$
+<br>
 
-Vérification : $\det(A) \cdot \det(B) = (-2) \times 2 = -4$ ✓
-:::
+Cas particulier où $A \in M_{2}(\mathbb{R})$. 
 
-## Exemple : Propriétés de la trace
+Soit $A = \begin{pmatrix} a & b \\ c & d \end{pmatrix}$. Alors 
 
-::: {.fragment}
-**Calcul pratique :**
-$A = \begin{pmatrix} 1 & 2 \\ 3 & 4 \end{pmatrix}, \quad B = \begin{pmatrix} 5 & 0 \\ 1 & 2 \end{pmatrix}$
+$$A^{-1} = \frac{1}{ad - bc}\begin{pmatrix} d & -b \\ -c & a \end{pmatrix}.$$
 
-$\tr(A) = 1 + 4 = 5$, $\tr(B) = 5 + 2 = 7$
 
-$A + B = \begin{pmatrix} 6 & 2 \\ 4 & 6 \end{pmatrix}$, $\tr(A + B) = 6 + 6 = 12$
+## Inverse de matrices : exemple (Wooclap: KFFPDJ)
 
-Vérification : $\tr(A) + \tr(B) = 5 + 7 = 12$ ✓
-:::
+<br>
+
+$$A = \begin{pmatrix} 2 & 0 \\ 0 & 3 \end{pmatrix}, \quad B = \begin{pmatrix} 1 & 1 \\ 0 & 1 \end{pmatrix}$$
+
+. . .
+
+On a :
+$AB = \begin{pmatrix} 2 & 2 \\ 0 & 3 \end{pmatrix},$ donc $(AB)^{-1} = \begin{pmatrix} 1/2 & -1/3 \\ 0 & 1/3 \end{pmatrix}$.
+
+Et effectivement : $B^{-1}A^{-1} = \begin{pmatrix} 1 & -1 \\ 0 & 1 \end{pmatrix} \begin{pmatrix} 1/2 & 0 \\ 0 & 1/3 \end{pmatrix} = \begin{pmatrix} 1/2 & -1/3 \\ 0 & 1/3 \end{pmatrix}$.
+
 
 ## Propriétés de la trace
 
-::: {.callout-important}
-**Propriétés de la trace**
+<br>
 
-1. $\tr(A) = \tr(A^{\top})$
-2. $\tr(A + B) = \tr(A) + \tr(B)$
-3. $\tr(MN^{\top}) = \tr(N^{\top}M)$
+La trace de la matrice $A \in M_{n}(\mathbb{R})$ est la somme des éléments diagonaux
+$$\text{tr}(A) = \sum_{i=1}^{n} a_{ii}.$$
+
+## Propriétés de la trace
+
+<br>
+
+::: {.callout-note icon=false}
+## Propriétés
+
+* $\text{tr}(A) = \text{tr}(A^{\top})$
+
+* $\text{tr}(A + B) = \text{tr}(A) + \text{tr}(B)$
+
+* $\text{tr}(MN^{\top}) = \text{tr}(N^{\top}M)$
+
 :::
 
-::: {.fragment}
-**Rappel :** La trace est la somme des éléments diagonaux
-$\tr(A) = \sum_{i=1}^{n} a_{ii}$
-:::
 
-## Exemple : Matrices définies positives
+## Propriétés de la trace : exemple (Wooclap: KFFPDJ)
 
-::: {.fragment}
-**Test de positivité :**
-$A = \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix}$
+<br>
 
-Pour tout $u = \begin{pmatrix} x \\ y \end{pmatrix} \neq 0$ :
-$u^\top A u = \begin{pmatrix} x & y \end{pmatrix} \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix} \begin{pmatrix} x \\ y \end{pmatrix} = 2x^2 + 2xy + 2y^2$
-$= x^2 + y^2 + (x+y)^2 > 0$
+Soit $X \in M_{n, p}(\mathbb{R})$ avec $p < n$ et de rang $p$, et donc telle que $X^\top X$ est de dimension $p \times p$ et inversible. Quelle est la valeur de la trace de $X (X^\top X)^{-1} X^\top$ ?
 
-Donc $A$ est définie positive !
-:::
+. . .
+
+\begin{align*}
+ \text{tr}(X (X^\top X)^{-1} X^\top) &= \text{tr}(X^\top X (X^\top X)^{-1})\\
+ &= \text{tr}(I_p) \\
+ &= p.
+\end{align*}
+
 
 ## Matrices spéciales
 
-::: {.callout-warning}
-**Définitions importantes**
+
+::: {.callout-important icon=false}
+## Définitions
 
 **Matrice définie positive :** $A$ est définie positive si 
-$$u^\top A u > 0 \text{ pour tout } u \neq 0$$
+$$\text{pour tout } u \neq 0,\quad u^\top A u > 0.$$
 
 **Matrice orthogonale :** $A$ est orthogonale si 
-$$A^\top A = A A^\top = I_n$$
+$$A^\top A = A A^\top = I_n.$$
 :::
+
+
+
+## Comment montrer qu'une matrice est définie positive ?
+
+<br>
+
+Soit $A = \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix}$ et pour tout $u = \begin{pmatrix} x \\ y \end{pmatrix} \neq 0$, on a :
+\begin{align*}
+u^\top A u &= \begin{pmatrix} x & y \end{pmatrix} \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix} \begin{pmatrix} x \\ y \end{pmatrix} \\
+  &= 2x^2 + 2xy + 2y^2 \\
+  &= x^2 + y^2 + (x+y)^2 > 0.
+\end{align*}
+
+Donc $A$ est définie positive.
+
 
 # Valeurs et vecteurs propres
 
-## Définition fondamentale
+## Valeurs et vecteurs propres
 
-::: {.callout-warning}
-**Valeurs et vecteurs propres**
+::: {.notes}
+Faire un dessin pour Au = lu.
+:::
 
-$\lambda \in \mathbb{R}$ est une **valeur propre** de $A$ s'il existe $u \neq 0$ tel que :
-$Au = \lambda u$
+::: {.callout-important icon=false}
+## Définitions
+
+Soit $A \in M_{n}(\mathbb{R})$. Le scalaire $\lambda \in \mathbb{R}$ est une **valeur propre** de $A$ s'il existe $u \neq 0$ tel que :
+$Au = \lambda u$.
 
 $u$ est le **vecteur propre** correspondant à $\lambda$.
 
-Le **spectre** $\text{sp}(A)$ est l'ensemble des valeurs propres.
+Le **spectre** de $A$, noté $\text{sp}(A)$, est l'ensemble des valeurs propres.
 :::
 
-## Exemple simple 2×2
+## Valeurs et vecteurs propres : exemple
 
-::: {.fragment}
-$A = \begin{pmatrix} 3 & 1 \\ 0 & 2 \end{pmatrix}$
+$$A = \begin{pmatrix} 3 & 1 \\ 0 & 2 \end{pmatrix}$$
+
+. . .
 
 **Calcul des valeurs propres :**
-$\det(A - \lambda I) = \det\begin{pmatrix} 3-\lambda & 1 \\ 0 & 2-\lambda \end{pmatrix} = (3-\lambda)(2-\lambda) = 0$
+$$\det(A - \lambda I) = \det\begin{pmatrix} 3-\lambda & 1 \\ 0 & 2-\lambda \end{pmatrix} = (3-\lambda)(2-\lambda)$$
 
-Donc $\lambda_1 = 3$ et $\lambda_2 = 2$
-:::
+Donc $\lambda_1 = 3$ et $\lambda_2 = 2$.
 
-::: {.fragment}
-**Vecteurs propres :**
-- Pour $\lambda_1 = 3$ : $u_1 = \begin{pmatrix} 1 \\ 0 \end{pmatrix}$
-- Pour $\lambda_2 = 2$ : $u_2 = \begin{pmatrix} 1 \\ -1 \end{pmatrix}$
 
-**Vérification :** $A u_1 = \begin{pmatrix} 3 \\ 0 \end{pmatrix} = 3 u_1$ ✓
-:::
+## Valeurs et vecteurs propres : exemple
+
+$$A = \begin{pmatrix} 3 & 1 \\ 0 & 2 \end{pmatrix}$$
+
+. . .
+
+**Calcul des vecteurs propres :**
+
+- Pour $\lambda_1 = 3$ : $u_1 = \begin{pmatrix} 1 \\ 0 \end{pmatrix}$.
+
+- Pour $\lambda_2 = 2$ : $u_2 = \begin{pmatrix} 1 \\ -1 \end{pmatrix}$.
+
 
 ## Propriétés des vecteurs propres
 
-::: {.callout-important}
-**Propriétés essentielles**
+::: {.callout-note icon=false}
+## Propriétés
 
-1. Si $u$ est vecteur propre pour $\lambda$, alors $cu$ l'est aussi (pour $c \neq 0$)
+* Si $u$ est vecteur propre pour $\lambda$, alors $cu$ l'est aussi (pour $c \neq 0$).
 
-2. **Pour matrices symétriques :** Si $u_1$ et $u_2$ correspondent à des valeurs propres différentes, alors :
-$$u_1^\top u_2 = 0 \text{ (orthogonalité)}$$
+* **Pour matrices symétriques :** Si $u_1$ et $u_2$ sont deux vecteurs propres correspondent à des valeurs propres différentes, alors :
+$$u_1^\top u_2 = 0 \text{ (orthogonalité)}.$$
 :::
 
-## Preuve de l'orthogonalité {.smaller}
+## Preuve de l'orthogonalité
 
-Soient $\lambda_1 \neq \lambda_2$ et $Au_1 = \lambda_1 u_1$, $Au_2 = \lambda_2 u_2$
 
-::: {.fragment}
-$$\lambda_1 u_1^\top u_2 = u_1^\top A u_2 = \lambda_2 u_1^\top u_2$$
-:::
+Soient $\lambda_1 \neq \lambda_2$ et $Au_1 = \lambda_1 u_1$, $Au_2 = \lambda_2 u_2$.
 
-::: {.fragment}
+. . .
+
+On a 
+$$\lambda_1 u_1^\top u_2 = u_1^\top A u_2 = \lambda_2 u_1^\top u_2.$$
+
+. . .
+
+Donc
 $$(\lambda_1 - \lambda_2)u_1^\top u_2 = 0$$
-:::
 
-::: {.fragment}
+. . .
+
 Comme $\lambda_1 \neq \lambda_2$, on a nécessairement $u_1^\top u_2 = 0$
+
+
+**→ Cette propriété est cruciale pour l'ACP !**
+
+
+## Caractérisation des valeurs propres
+
+<br>
+
+::: {.callout-note icon=false}
+## Propriétés
+
+* **Matrice symétrique** → toutes les valeurs propres sont **réelles**.
+
+* **Matrice définie positive** → toutes les valeurs propres sont **strictement positives**.
+
 :::
 
-::: {.fragment}
-**→ Cette propriété est cruciale pour l'analyse en composantes principales !**
-:::
+## Caractérisation des valeurs propres : exemple
 
-## Caractérisation par les valeurs propres
+<br>
 
-::: {.callout-important}
-**Théorèmes importants**
+Soit $A = \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix} \text{ (symétrique et définie positive)}$.
 
-1. **Matrice symétrique** → toutes les valeurs propres sont **réelles**
+. . .
 
-2. **Matrice définie positive** → toutes les valeurs propres sont **strictement positives**
-:::
+Valeurs propres : $\lambda_1 = 3, \lambda_2 = 1$ (toutes réelles et > 0).
 
-::: {.fragment}
-**Exemple illustratif :**
-$A = \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix} \text{ (symétrique et définie positive)}$
+Vecteurs propres : $u_1 = \begin{pmatrix} 1 \\ 1 \end{pmatrix}, u_2 = \begin{pmatrix} 1 \\ -1 \end{pmatrix}$.
 
-Valeurs propres : $\lambda_1 = 3, \lambda_2 = 1$ (toutes réelles et > 0)
+Vérifions l'orthogonalité : $u_1^\top u_2 = 1 \times 1 + 1 \times (-1) = 0$.
 
-Vecteurs propres : $u_1 = \begin{pmatrix} 1 \\ 1 \end{pmatrix}, u_2 = \begin{pmatrix} 1 \\ -1 \end{pmatrix}$
-
-**Vérification orthogonalité :** $u_1^\top u_2 = 1 - 1 = 0$ ✓
-:::
 
 # Diagonalisation
 
-## Définition de la diagonalisation
+## Diagonalisation de matrices
 
-::: {.callout-warning}
-**Matrice diagonalisable**
+<br>
 
-$A$ est diagonalisable s'il existe $P$ inversible et $D$ diagonale telles que :
-$$P^{-1} A P = D \Leftrightarrow A = P D P^{-1}$$
+::: {.callout-important icon=false}
+## Définition
+
+Une matrice $A$ est **diagonalisable** s'il existe $P$ inversible et $D$ diagonale telles que :
+$$A = P D P^{-1} \Leftrightarrow P^{-1} A P = D.$$
 :::
 
-::: {.fragment}
-**Interprétation :** On peut "simplifier" $A$ en changeant de base
-:::
+. . .
+
+**Interprétation :** On peut "simplifier" $A$ en changeant de base.
+
 
 ## Théorème de décomposition spectrale
 
-::: {.callout-caution}
-**Décomposition spectrale**
+<br>
+
+::: {.callout-important icon=false}
+## Théorème 
 
 Pour toute matrice **symétrique** $A$, il existe une matrice **orthogonale** $P$ telle que :
 $A = P \Lambda P^\top$
-où $\Lambda = \text{diag}(\lambda_1, \ldots, \lambda_n)$
+où $\Lambda = \text{diag}(\lambda_1, \ldots, \lambda_n)$.
+
 :::
 
-::: {.fragment}
-**Exemple concret :**
-$A = \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix}, \quad P = \frac{1}{\sqrt{2}}\begin{pmatrix} 1 & 1 \\ 1 & -1 \end{pmatrix}, \quad \Lambda = \begin{pmatrix} 3 & 0 \\ 0 & 1 \end{pmatrix}$
+La matrice $P$ est formée des vecteurs propres de $A$ et $\Lambda$ est la matrice diagonale des valeurs propres associées.
 
-**Vérification :** $P \Lambda P^\top = \frac{1}{2}\begin{pmatrix} 1 & 1 \\ 1 & -1 \end{pmatrix}\begin{pmatrix} 3 & 0 \\ 0 & 1 \end{pmatrix}\begin{pmatrix} 1 & 1 \\ 1 & -1 \end{pmatrix} = \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix} = A$ ✓
+## Exemple
+
+En reprenant l'example précédent.
+
+Soit $A = \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix}$. On a $P = \frac{1}{\sqrt{2}}\begin{pmatrix} 1 & 1 \\ 1 & -1 \end{pmatrix}$ et $\Lambda = \begin{pmatrix} 3 & 0 \\ 0 & 1 \end{pmatrix}.$
+
+On peut vérifier le théorème de décomposition spectrale :
+
+$$P \Lambda P^\top = \frac{1}{2}\begin{pmatrix} 1 & 1 \\ 1 & -1 \end{pmatrix}\begin{pmatrix} 3 & 0 \\ 0 & 1 \end{pmatrix}\begin{pmatrix} 1 & 1 \\ 1 & -1 \end{pmatrix} = \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix} = A.$$
+
+
+## Lien avec le déterminant et la trace
+
+<br>
+
+::: {.callout-note icon=false}
+## Propriétés
+
+Si la matrice $A$ a pour valeurs propres $\lambda_1, \ldots, \lambda_n$ :
+
+* $\det(A) = \prod_{i=1}^{n} \lambda_i$.
+
+* $\text{tr}(A) = \sum_{i=1}^{n} \lambda_i$.
+
 :::
 
-## Applications pratiques {.smaller}
+## Lien avec le déterminant et la trace : exemple
 
-**Problème d'optimisation :**
-Maximiser $u^\top A u$ sous la contrainte $u^\top B u = 1$
+<br>
 
-::: {.fragment}
-**Exemple numérique :**
-$A = \begin{pmatrix} 5 & 2 \\ 2 & 2 \end{pmatrix}, \quad B = \begin{pmatrix} 2 & 0 \\ 0 & 1 \end{pmatrix}$
+Soit $A = \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix}$. On a vu que ses valeurs propres sont $\lambda_1 = 3$ et $\lambda_2 = 1$.
 
-$B^{-1}A = \begin{pmatrix} 1/2 & 0 \\ 0 & 1 \end{pmatrix}\begin{pmatrix} 5 & 2 \\ 2 & 2 \end{pmatrix} = \begin{pmatrix} 5/2 & 1 \\ 2 & 2 \end{pmatrix}$
+On peut donc vérifier les formules pour le déterminant et la trace :
 
-Plus grande valeur propre : $\lambda_{\max} \approx 3.56$
+$$\det(A) = 4 - 1 = 3 = 3 \times 1 = \lambda_1 \lambda_2,$$
 
-Solution optimale : $u^* = $ vecteur propre correspondant
-:::
-
-::: {.fragment}
-**→ Principe fondamental de l'analyse en composantes principales**
-:::
-
-## Lien avec déterminant et trace
-
-::: {.callout-important}
-**Relations fondamentales**
-
-Si $A$ a pour valeurs propres $\lambda_1, \ldots, \lambda_n$ :
-
-1. $\det(A) = \prod_{i=1}^{n} \lambda_i$
-2. $\tr(A) = \sum_{i=1}^{n} \lambda_i$
-:::
-
-::: {.fragment}
-**Exemple de vérification :**
-$A = \begin{pmatrix} 2 & 1 \\ 1 & 2 \end{pmatrix}, \quad \lambda_1 = 3, \lambda_2 = 1$
-
-$\det(A) = 4 - 1 = 3 = 3 \times 1 = \lambda_1 \lambda_2$ ✓
-
-$\tr(A) = 2 + 2 = 4 = 3 + 1 = \lambda_1 + \lambda_2$ ✓
-:::
-
-## Exemple complet : ACP
-
-::: {.fragment}
-**Données : positions de points en 2D**
-$X = \begin{pmatrix} 1 & 2 \\ 3 & 1 \\ 2 & 3 \\ 4 & 2 \end{pmatrix}$
-
-**Matrice de covariance :**
-$C = \frac{1}{n-1}X^\top X = \begin{pmatrix} 2.33 & 0.33 \\ 0.33 & 1.33 \end{pmatrix}$
-
-**Composantes principales :** vecteurs propres de $C$
-- 1ère composante : direction de variance maximale
-- 2ème composante : direction orthogonale de variance restante
-:::
-
-# Conclusions
-
-## Points clés à retenir
-
-::: {.incremental}
-- **Matrices symétriques** : valeurs propres réelles, vecteurs propres orthogonaux
-- **Décomposition spectrale** : outil puissant pour l'analyse
-- **Applications** : optimisation, réduction de dimension
-- **Liens** : déterminant et trace via les valeurs propres
-:::
-
-## Applications en apprentissage automatique
-
-::: {.incremental}
-- **Analyse en composantes principales (ACP)**
-- **Optimisation** de fonctions quadratiques
-- **Méthodes de réduction de dimension**
-- **Analyse de stabilité** des algorithmes
-:::
-
-## Questions ?
-
-**Ressources recommandées :**
-- Cours MAT-1200
-- @deisenrothMathematicsMachineLearning2020 (anglais)
-- @grifoneAlgebreLineaire2024 (français)
-
----
-
-**Merci pour votre attention !**
+$$\text{tr}(A) = 2 + 2 = 4 = 3 + 1 = \lambda_1 + \lambda_2.$$
