--- a/slides/01-introduction-slides.qmd
+++ b/slides/01-introduction-slides.qmd
@@ -3,7 +3,7 @@ title: "STT-2200: Analyse de données"
 subtitle: "Introduction"
 author: "Steven Golovkine"
 lang: fr
-date: today
+date: "02 sept. 2025"
 date-format: "DD MMM YYYY"
 slide-number: c/t
 title-logo: ../include/logo-ul.png
