--- a/slides/02-revisions-proba-slides.qmd
+++ b/slides/02-revisions-proba-slides.qmd
@@ -3,7 +3,7 @@ title: "Révisions"
 subtitle: "Probabilité et statistique"
 author: "Steven Golovkine"
 lang: fr
-date: today
+date: "05 sept. 2025"
 date-format: "DD MMM YYYY"
 slide-number: c/t
 title-logo: ../include/logo-ul.png
@@ -30,7 +30,6 @@ format:
 
 4. Estimation statistique
 
-5. Applications pratiques
 
 # Modéliser le hasard
 
@@ -271,262 +270,210 @@ $$\mathbb{E}[X^2] = \int_0^1 x^2 \cdot 1 \, dx = \left[\frac{x^3}{3}\right]_0^1 
 
 :::
 
-::: {.fragment}
-**Exemple : Loi uniforme sur $[0, 1]$**
+## Variance et écart-type : exemple
+
+<br>
+
+**Loi uniforme sur $[0, 1]$**
+
 - $\mathbb{E}(X) = 1/2$
+
 - $\mathbb{E}(X^2) = 1/3$
+
 - $\text{Var}(X) = 1/3 - (1/2)^2 = 1/3 - 1/4 = 1/12$
+
 - $\sigma(X) = \sqrt{1/12} \approx 0.289$
-:::
+
 
 ## Fonction de répartition
 
-::: {.callout-warning}
-**Définition**
+<br>
 
-La **fonction de répartition** est :
-$$F(t) = \mathbb{P}(X \leq t)$$
+::: {.callout-important icon=false}
+## Définition
+
+La **fonction de répartition** est donnée par :
+$$F(t) = \mathbb{P}(X \leq t).$$
 :::
 
-::: {.fragment}
-**Exemple : Loi uniforme sur $[0, 1]$**
+## Fonction de répartition : exemple
+
+**Loi uniforme sur $[0, 1]$**
+
 $$F(t) = \begin{cases} 
 0 & \text{si } t < 0 \\
 t & \text{si } 0 \leq t \leq 1 \\
 1 & \text{si } t > 1
-\end{cases}$$
+\end{cases}.$$
 
-**Vérification :** $\mathbb{P}(0.2 < X \leq 0.7) = F(0.7) - F(0.2) = 0.7 - 0.2 = 0.5$ ✓
-:::
+**Calcul :** $\mathbb{P}(0.2 < X \leq 0.7) = F(0.7) - F(0.2) = 0.7 - 0.2 = 0.5$.
+
+
 
 # Vecteurs aléatoires
 
 ## Densités marginales et indépendance
 
-::: {.callout-warning}
-**Vecteur aléatoire**
-
-$X = (X_1, X_2)$ avec densité conjointe $f_X(x, y)$
+**Vecteur aléatoire** : $X = (X_1, X_2)^\top$ avec densité conjointe $f_X(x, y)$.
 
 **Densités marginales :**
+
 - $f_{X_1}(x) = \int_{-\infty}^{\infty} f_X(x, y) dy$
+
 - $f_{X_2}(y) = \int_{-\infty}^{\infty} f_X(x, y) dx$
 
-**Indépendance :** $f_X(x, y) = f_{X_1}(x) \cdot f_{X_2}(y)$
-:::
+**Indépendance :** $f_X(x, y) = f_{X_1}(x) \cdot f_{X_2}(y)$.
+
 
 ## Exemple : Variables indépendantes
 
-::: {.fragment}
-**Contexte :** $X_1$ et $X_2$ uniformes indépendantes sur $[0, 1]$
+
+**Contexte :** Soient $X_1$ et $X_2$ uniformes indépendantes sur $[0, 1]$.
 
 $$f_X(x, y) = \begin{cases} 1 & \text{si } (x,y) \in [0,1]^2 \\ 0 & \text{sinon} \end{cases}$$
-:::
 
-::: {.fragment}
+. . .
+
 **Calculs de probabilités :**
-- $\mathbb{P}(X_1 \leq 0.5, X_2 \leq 0.8) = \int_0^{0.5} \int_0^{0.8} 1 \, dy \, dx = 0.5 \times 0.8 = 0.4$
-- $\mathbb{P}(X_1 + X_2 \leq 1) = \int \int_{x+y \leq 1} 1 \, dy \, dx = 0.5$ (aire du triangle)
-:::
+
+- $\mathbb{P}(X_1 \leq 0.5, X_2 \leq 0.8) = \int_0^{0.5} \int_0^{0.8} 1 \, dy \, dx = 0.5 \times 0.8 = 0.4$.
+
+- $\mathbb{P}(X_1 + X_2 \leq 1) = \int \int_{x+y \leq 1} 1 \, dy \, dx = 0.5$ (aire du triangle).
+
 
 ## Loi normale multivariée
 
-::: {.callout-note}
-**Loi normale $p$-dimensionnelle**
+::: {.callout-important icon=false}
+## Loi normale $p$-dimensionnelle
 
-$$f_X(x) = \frac{1}{(2\pi)^{p/2}} \frac{1}{(\det \Sigma)^{1/2}} \exp\left\{-\frac{1}{2}(x-\mu)^T \Sigma^{-1} (x-\mu)\right\}$$
+Soit $X$ un vecteur aléatoire suivant une loi normale $p$-dimensionnelle. Sa densité est donnée par :
+$$f_X(x) = \frac{1}{(2\pi)^{p/2}} \frac{1}{(\det \Sigma)^{1/2}} \exp\left\{-\frac{1}{2}(x-\mu)^T \Sigma^{-1} (x-\mu)\right\}.$$
 
-**Notation :** $X \sim \mathcal{N}_p(\mu, \Sigma)$
+**Notation :** $X \sim \mathcal{N}_p(\mu, \Sigma)$.
+
 :::
 
 ## Exemple : Loi normale bivariée
 
-::: {.fragment}
 **Cas simple :** $X \sim \mathcal{N}_2(\mu, I_2)$ avec $\mu = \begin{pmatrix} 0 \\ 0 \end{pmatrix}$
 
 $$f_X(x, y) = \frac{1}{2\pi} \exp\left\{-\frac{x^2 + y^2}{2}\right\}$$
-:::
 
-::: {.fragment}
-**Propriétés :**
-- Les courbes de niveau sont des cercles centrés à l'origine
-- $X_1$ et $X_2$ sont indépendantes (car $\Sigma = I_2$)
-- $\mathbb{E}(X_1) = \mathbb{E}(X_2) = 0$, $\text{Var}(X_1) = \text{Var}(X_2) = 1$
-:::
+
 
 ## Covariance et corrélation
 
-::: {.callout-warning}
-**Définitions**
+::: {.callout-important icon=false}
+## Définitions
+
+Soit $X = (X_1, X_2)^\top$ un vecteur aléatoire.
 
 **Covariance :**
-$$\text{Cov}(X_1, X_2) = \mathbb{E}[(X_1 - \mathbb{E}(X_1))(X_2 - \mathbb{E}(X_2))]$$
+$\text{Cov}(X_1, X_2) = \mathbb{E}[(X_1 - \mathbb{E}(X_1))(X_2 - \mathbb{E}(X_2))].$
 
 **Corrélation :**
-$$\text{Corr}(X_1, X_2) = \frac{\text{Cov}(X_1, X_2)}{\sigma(X_1) \sigma(X_2)}$$
+$\text{Corr}(X_1, X_2) = \frac{\text{Cov}(X_1, X_2)}{\sigma(X_1) \sigma(X_2)}.$
 :::
 
 ## Interprétation des signes
 
-::: {.incremental}
-- **Corrélation positive** ($> 0$) : $X_1 \uparrow \Rightarrow X_2 \uparrow$
-- **Corrélation négative** ($< 0$) : $X_1 \uparrow \Rightarrow X_2 \downarrow$
+- **Corrélation positive** ($> 0$) : $X_1 \nearrow ~\Rightarrow ~ X_2 \nearrow$.
+
+- **Corrélation négative** ($< 0$) : $X_1 \searrow ~\Rightarrow ~ X_2 \searrow$.
+
 - **Corrélation nulle** ($= 0$) : pas de relation linéaire (variables orthogonales)
-:::
 
-::: {.fragment}
-**Exemple numérique :**
-Données : $(1,2)$, $(2,3)$, $(3,5)$, $(4,6)$
 
-- $\mathbb{E}(X_1) = 2.5$, $\mathbb{E}(X_2) = 4$
-- $\text{Cov}(X_1, X_2) = \mathbb{E}(X_1 X_2) - \mathbb{E}(X_1)\mathbb{E}(X_2) = 11.5 - 10 = 1.5 > 0$
+## Interprétation des signes : exemple (Wooclap: KFFPDJ)
 
-**Interprétation :** relation positive entre $X_1$ et $X_2$
-:::
+Soit $X = (X_1, X_2, X_3)^\top$ avec
+$$\text{Var}(X) = \begin{pmatrix} 4 & 0 & 3 \\ 0 & 2 & 0 \\ 3 & 0 & 9 \end{pmatrix}.$$
+Calculer $\text{Corr}(X_1, X_3)$.
+
+. . .
+
+$$\text{Corr}(X_1, X_3) = \frac{\text{Cov}(X_1, X_3)}{\sigma(X_1)\sigma(X_3)}
+= \frac{3}{\sqrt{4} \times \sqrt{9}} = \frac{1}{2}.$$
+
 
 ## Propriétés de la covariance
 
-::: {.callout-important}
-**Propriétés essentielles**
+::: {.callout-note icon=false}
+## Propriétés
 
-1. $\text{Cov}(X_1, X_2) = \mathbb{E}(X_1 X_2) - \mathbb{E}(X_1)\mathbb{E}(X_2)$
-2. $\text{Cov}(X_1, X_2) = \text{Cov}(X_2, X_1)$ (symétrie)
-3. $\text{Cov}(X_1 + \lambda Y_1, X_2) = \text{Cov}(X_1, X_2) + \lambda \text{Cov}(Y_1, X_2)$ (linéarité)
+1. $\text{Cov}(X_1, X_2) = \mathbb{E}(X_1 X_2) - \mathbb{E}(X_1)\mathbb{E}(X_2)$.
+
+2. $\text{Cov}(X_1, X_2) = \text{Cov}(X_2, X_1)$ (symétrie).
+
+3. $\text{Cov}(X_1 + \lambda Y_1, X_2) = \text{Cov}(X_1, X_2) + \lambda \text{Cov}(Y_1, X_2)$ (linéarité).
+
 :::
 
-::: {.fragment}
-**Exemple de linéarité :**
-$$\text{Cov}(2X_1 + 3Y_1, X_2) = 2\text{Cov}(X_1, X_2) + 3\text{Cov}(Y_1, X_2)$$
-:::
 
 # Estimation statistique
 
 ## Le problème de l'estimation
 
-::: {.incremental}
-- **Réalité :** On ne connaît pas exactement la distribution
-- **Données :** Échantillon $x_1, x_2, \ldots, x_n$ (observations)
-- **Objectif :** Estimer les paramètres inconnus ($\mu$, $\Sigma$, etc.)
-:::
+<br>
+
+- **Réalité :** On ne connaît pas exactement la distribution de $X$.
+
+- **Données :** Échantillon $x_1, x_2, \ldots, x_n$ (observations).
+
+- **Objectif :** Estimer les paramètres inconnus ($\mu$, $\Sigma$, etc.).
+
 
 ## Estimation de la moyenne
 
-::: {.callout-warning}
-**Estimateur de la moyenne**
-$$\widehat{\mu} = \overline{X} = \frac{1}{n} \sum_{i=1}^n x_i$$
+::: {.callout-note icon=false}
+## Estimateur de la moyenne
+
+$$\widehat{\mu} = \overline{X} = \frac{1}{n} \sum_{i=1}^n x_i.$$
 :::
 
-::: {.fragment}
+. . .
+
 **Exemple pratique :**
-Tailles d'étudiants (cm) : 170, 175, 168, 180, 172
+Tailles en cm : 170, 175, 168, 180, 172
 
-$\widehat{\mu} = \frac{170 + 175 + 168 + 180 + 172}{5} = \frac{865}{5} = 173$ cm
-:::
+$$\widehat{\mu} = \frac{170 + 175 + 168 + 180 + 172}{5} = \frac{865}{5} = 173 \text{cm.}$$
+
 
 ## Estimation de la variance
 
-::: {.callout-warning}
-**Estimateur de la variance**
+::: {.callout-note icon=false}
+## Estimateur de la variance
+
 $$\widehat{\Sigma} = \frac{1}{n-1} \sum_{i=1}^n (x_i - \widehat{\mu})(x_i - \widehat{\mu})^T$$
 
-**Pourquoi $n-1$ ?** Correction du biais dû à l'utilisation de $\widehat{\mu}$
+**Pourquoi diviser par $n-1$ ?** Correction du biais dû à l'utilisation de $\widehat{\mu}$.
+
 :::
 
 ## Exemple complet de calcul
 
-::: {.fragment}
 **Données :** 170, 175, 168, 180, 172 (tailles en cm)
+
 - $\widehat{\mu} = 173$
-- Écarts au carré : $(170-173)^2 = 9$, $(175-173)^2 = 4$, $(168-173)^2 = 25$, $(180-173)^2 = 49$, $(172-173)^2 = 1$
-:::
 
-::: {.fragment}
+- Écarts au carré : $(170-173)^2 = 9$, $(175-173)^2 = 4$, $(168-173)^2 = 25$, $(180-173)^2 = 49$, $(172-173)^2 = 1$.
+
 **Variance estimée :**
-$$\widehat{\sigma}^2 = \frac{9 + 4 + 25 + 49 + 1}{5-1} = \frac{88}{4} = 22$$
 
-**Écart-type estimé :** $\widehat{\sigma} = \sqrt{22} \approx 4.69$ cm
-:::
+$$\widehat{\sigma^2} = \frac{9 + 4 + 25 + 49 + 1}{5-1} = \frac{88}{4} = 22.$$
+
 
 ## Estimation de la corrélation
 
-::: {.fragment}
-**Matrice de corrélation estimée :**
-$$\widehat{R} = D^{-1} \widehat{\Sigma} D^{-1}$$
-où $D$ est la matrice des écarts-types
-:::
+**Matrice de corrélation estimée :** $\widehat{R} = D^{-1} \widehat{\Sigma} D^{-1}$
+où $D$ est la matrice diagonale des écarts-types.
 
-::: {.fragment}
+. . .
+
 **Exemple 2D :**
-Si $\widehat{\Sigma} = \begin{pmatrix} 4 & 1.5 \\ 1.5 & 9 \end{pmatrix}$
+Si $\widehat{\Sigma} = \begin{pmatrix} 4 & 1.5 \\ 1.5 & 9 \end{pmatrix}$. Alors,
 
-Alors $D = \begin{pmatrix} 2 & 0 \\ 0 & 3 \end{pmatrix}$ et $\widehat{R} = \begin{pmatrix} 1 & 0.25 \\ 0.25 & 1 \end{pmatrix}$
+$$D = \begin{pmatrix} 2 & 0 \\ 0 & 3 \end{pmatrix}, \quad\text{et}\quad\widehat{R} = \begin{pmatrix} 1 & 0.25 \\ 0.25 & 1 \end{pmatrix}.$$
 
-**Interprétation :** corrélation faible positive (0.25) entre les variables
-:::
+**Interprétation :** corrélation faible positive (0.25) entre les variables.
 
-# Applications pratiques
-
-## Exemple : Analyse de données météorologiques
-
-::: {.fragment}
-**Contexte :** Température et humidité quotidiennes
-- Échantillon : 30 jours de mesures
-- $X_1$ = température (°C), $X_2$ = humidité (%)
-:::
-
-::: {.fragment}
-**Résultats estimés :**
-- $\widehat{\mu} = \begin{pmatrix} 22 \\ 65 \end{pmatrix}$ (température moyenne : 22°C, humidité : 65%)
-- Corrélation estimée : $\widehat{\rho} = -0.6$ (négative forte)
-
-**Interprétation :** Quand la température augmente, l'humidité tend à diminuer
-:::
-
-## Application : Contrôle qualité
-
-::: {.fragment}
-**Contexte :** Production de pièces manufacturées
-- $X$ = diamètre des pièces (mm)
-- Spécification : $\mu = 50$ mm, $\sigma = 0.1$ mm
-:::
-
-::: {.fragment}
-**Échantillon de contrôle :** 49.9, 50.1, 49.8, 50.2, 50.0
-
-$\widehat{\mu} = 50.0$ mm ✓ (dans les spécifications)
-
-$\widehat{\sigma} = 0.15$ mm ⚠️ (variabilité plus élevée que prévu)
-
-**Action :** Ajuster le processus de production
-:::
-
-## Points clés à retenir
-
-::: {.incremental}
-- **Probabilités** : modélisation de l'incertitude
-- **Variables aléatoires** : quantification des phénomènes aléatoires
-- **Espérance et variance** : caractéristiques centrales des distributions
-- **Covariance/corrélation** : mesure de dépendance linéaire
-- **Estimation** : inférence à partir d'échantillons
-:::
-
-## Applications en apprentissage automatique
-
-::: {.incremental}
-- **Classification probabiliste** (Bayes naïf, régression logistique)
-- **Réduction de dimension** (ACP via matrices de covariance)
-- **Apprentissage de paramètres** (maximum de vraisemblance)
-- **Incertitude en prédiction** (intervalles de confiance)
-- **Analyse de données** (statistiques descriptives)
-:::
-
-## Questions ?
-
-**Ressources recommandées :**
-- Cours STT-1000
-- @wassermanAllStatisticsConcise2010 (anglais)
-- @delmasIntroductionAuCalcul2013 (français)
-
----
-
-**Merci pour votre attention !**
