--- a/contents/02-revisions.qmd
+++ b/contents/02-revisions.qmd
@@ -9,9 +9,9 @@ format:
 
 * Slides: 
 
-  - [Algèbre linéaire](../slides/02-revisions-algebre-slides.qmd)
+  - [Algèbre linéaire](../slides/02-revisions-algebre-slides.qmd) - [annoté](../slides/02-revisions-algebre-slides-annotated.qmd)
 
-  - [Probabilités et statistiques](../slides/02-revisions-proba-slides.qmd)
+  - [Probabilités et statistiques](../slides/02-revisions-proba-slides.qmd) - [annoté](../slides/02-revisions-proba-slides-annotated.qmd)
 
   - [Algorithmique / Programmation](../slides/02-revisions-programming-slides.qmd)
 
